// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`the Excellent Quality component should render correctly when quality is "excellent" 1`] = `
<WithStyles(ForwardRef(Container))>
  <div
    className="makeStyles-mainContainer-1"
  >
    <WithStyles(ForwardRef(Grid))
      className="makeStyles-header-2"
      item={true}
      lg={5}
    >
      <WithStyles(ForwardRef(Typography))
        gutterBottom={true}
        variant="h1"
      >
        Expected quality is 
        excellent
      </WithStyles(ForwardRef(Typography))>
    </WithStyles(ForwardRef(Grid))>
    <WithStyles(ForwardRef(Grid))
      className="makeStyles-illustrationContainer-3"
      item={true}
      lg={5}
    >
      <img
        alt="Success"
        className="makeStyles-illustration-4"
        src="test-file-stub"
      />
      <WithStyles(ForwardRef(Button))
        className="makeStyles-viewButton-5"
        onClick={[MockFunction]}
        variant="outlined"
      >
        <ViewIcon />
        View detailed quality information
      </WithStyles(ForwardRef(Button))>
    </WithStyles(ForwardRef(Grid))>
    <WithStyles(ForwardRef(Grid))
      className="makeStyles-finishButton-6"
      item={true}
      lg={5}
    >
      <WithStyles(ForwardRef(Typography))
        gutterBottom={true}
        variant="body1"
      >
        This is the last step! Your expected audio and video quality is 
        <strong>
          excellent
        </strong>
         and overall performance looks 
        good
        .
      </WithStyles(ForwardRef(Typography))>
      <WithStyles(ForwardRef(Button))
        color="primary"
        onClick={[MockFunction]}
        variant="contained"
      >
        Finish up!
      </WithStyles(ForwardRef(Button))>
    </WithStyles(ForwardRef(Grid))>
  </div>
</WithStyles(ForwardRef(Container))>
`;

exports[`the Excellent Quality component should render correctly when quality is "good" 1`] = `
<WithStyles(ForwardRef(Container))>
  <div
    className="makeStyles-mainContainer-1"
  >
    <WithStyles(ForwardRef(Grid))
      className="makeStyles-header-2"
      item={true}
      lg={5}
    >
      <WithStyles(ForwardRef(Typography))
        gutterBottom={true}
        variant="h1"
      >
        Expected quality is 
        good
      </WithStyles(ForwardRef(Typography))>
    </WithStyles(ForwardRef(Grid))>
    <WithStyles(ForwardRef(Grid))
      className="makeStyles-illustrationContainer-3"
      item={true}
      lg={5}
    >
      <img
        alt="Success"
        className="makeStyles-illustration-4"
        src="test-file-stub"
      />
      <WithStyles(ForwardRef(Button))
        className="makeStyles-viewButton-5"
        onClick={[MockFunction]}
        variant="outlined"
      >
        <ViewIcon />
        View detailed quality information
      </WithStyles(ForwardRef(Button))>
    </WithStyles(ForwardRef(Grid))>
    <WithStyles(ForwardRef(Grid))
      className="makeStyles-finishButton-6"
      item={true}
      lg={5}
    >
      <WithStyles(ForwardRef(Typography))
        gutterBottom={true}
        variant="body1"
      >
        This is the last step! Your expected audio and video quality is 
        <strong>
          good
        </strong>
         and overall performance looks 
        ok
        .
      </WithStyles(ForwardRef(Typography))>
      <WithStyles(ForwardRef(Button))
        color="primary"
        onClick={[MockFunction]}
        variant="contained"
      >
        Finish up!
      </WithStyles(ForwardRef(Button))>
    </WithStyles(ForwardRef(Grid))>
  </div>
</WithStyles(ForwardRef(Container))>
`;
